--- a/index.html
+++ b/index.html
@@ -420,6 +420,7 @@
     <link rel="stylesheet" href="css/calendar.microtactic-environment.css">
     <link rel="stylesheet" href="css/calendar.middle-amazonia.css">
     <link rel="stylesheet" href="css/calendar.middle-of-nowhere.css">
+    <link rel="stylesheet" href="css/calendar.middle-of-the-night.css">
     <link rel="stylesheet" href="css/calendar.midnight-alchemy.css">
     <link rel="stylesheet" href="css/calendar.midnight-black.css">
     <link rel="stylesheet" href="css/calendar.midnight-jungle.css">
@@ -1373,6 +1374,7 @@
                 <option value="microtactic-environment">Microtactic Environment</option>
                 <option value="middle-amazonia">Middle Amazonia</option>
                 <option value="middle-of-nowhere">Middle of Nowhere</option>
+                <option value="middle-of-the-night">Middle of the Night</option>
                 <option value="midnight-alchemy">Midnight Alchemy</option>
                 <option value="midnight-black">Midnight Black</option>
                 <option value="midnight-jungle">Midnight Jungle</option>
