--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
     <link rel="stylesheet" href="css/calendar.golden-summer.css">
     <link rel="stylesheet" href="css/calendar.golden-time.css">
     <link rel="stylesheet" href="css/calendar.gold-mine.css">
+    <link rel="stylesheet" href="css/calendar.good-game.css">
     <link rel="stylesheet" href="css/calendar.gradual-improvement.css">
     <link rel="stylesheet" href="css/calendar.grand-prix.css">
     <link rel="stylesheet" href="css/calendar.great-britain.css">
@@ -1263,6 +1264,7 @@
                 <option value="golden-summer">Golden Summer</option>
                 <option value="golden-time">Golden Time</option>
                 <option value="gold-mine">Gold Mine</option>
+                <option value="good-game">Good Game</option>
                 <option value="gradual-improvement">Gradual Improvement</option>
                 <option value="grand-prix">Grand Prix</option>
                 <option value="great-britain">Great Britain</option>
