--- a/index.html
+++ b/index.html
@@ -355,10 +355,11 @@
     <link rel="stylesheet" href="css/calendar.indigo-jeans.css">
     <link rel="stylesheet" href="css/calendar.in-my-style.css">
     <link rel="stylesheet" href="css/calendar.inspiration-line.css">
+    <link rel="stylesheet" href="css/calendar.intelligence-quotient.css">
+    <link rel="stylesheet" href="css/calendar.inter-miami.css">
     <link rel="stylesheet" href="css/calendar.in-the-dusk.css">
     <link rel="stylesheet" href="css/calendar.in-the-mountains.css">
     <link rel="stylesheet" href="css/calendar.in-the-raspberry-dawn.css">
-    <link rel="stylesheet" href="css/calendar.intelligence-quotient.css">
     <link rel="stylesheet" href="css/calendar.into-the-jungle.css">
     <link rel="stylesheet" href="css/calendar.into-the-night.css">
     <link rel="stylesheet" href="css/calendar.invincible-zone.css">
@@ -699,6 +700,7 @@
     <link rel="stylesheet" href="css/calendar.tropical-sunset.css">
     <link rel="stylesheet" href="css/calendar.turquoise-frontier.css">
     <link rel="stylesheet" href="css/calendar.twilight-garden.css">
+    <link rel="stylesheet" href="css/calendar.under-the-sun.css">
     <link rel="stylesheet" href="css/calendar.underwater-life.css">
     <link rel="stylesheet" href="css/calendar.unexpected-layout.css">
     <link rel="stylesheet" href="css/calendar.unforgettable-moments.css">
@@ -1311,10 +1313,11 @@
                 <option value="indigo-jeans">Indigo Jeans</option>
                 <option value="in-my-style">In My Style</option>
                 <option value="inspiration-line">Inspiration Line</option>
+                <option value="intelligence-quotient">Intelligence Quotient</option>
+                <option value="inter-miami">Inter Miami</option>
                 <option value="in-the-dusk">In the Dusk</option>
                 <option value="in-the-mountains">In the Mountains</option>
                 <option value="in-the-raspberry-dawn">In the Raspberry Dawn</option>
-                <option value="intelligence-quotient">Intelligence Quotient</option>
                 <option value="into-the-jungle">Into the Jungle</option>
                 <option value="into-the-night">Into the Night</option>
                 <option value="invincible-zone">Invincible Zone</option>
@@ -1653,6 +1656,7 @@
                 <option value="tropical-sunset">Tropical Sunset</option>
                 <option value="turquoise-frontier">Turquoise Frontier</option>
                 <option value="twilight-garden">Twilight Garden</option>
+                <option value="under-the-sun">Under the Sun</option>
                 <option value="underwater-life">Underwater Life</option>
                 <option value="unexpected-layout">Unexpected Layout</option>
                 <option value="unforgettable-moments">Unforgettable Moments</option>
