--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <link rel="stylesheet" href="css/calendar.andromeda-galaxy.css">
     <link rel="stylesheet" href="css/calendar.a-new-chapter.css">
     <link rel="stylesheet" href="css/calendar.a-new-opportunity.css">
+    <link rel="stylesheet" href="css/calendar.antarctic-expedition.css">
     <link rel="stylesheet" href="css/calendar.antarctic-ice.css">
     <link rel="stylesheet" href="css/calendar.antarctic-snowdrifts.css">
     <link rel="stylesheet" href="css/calendar.apple-in-honey.css">
@@ -484,6 +485,7 @@
     <link rel="stylesheet" href="css/calendar.ocean-view.css">
     <link rel="stylesheet" href="css/calendar.ocean-view-drive.css">
     <link rel="stylesheet" href="css/calendar.ocean-vortex.css">
+    <link rel="stylesheet" href="css/calendar.off-road-trip.css">
     <link rel="stylesheet" href="css/calendar.okinawa-breeze.css">
     <link rel="stylesheet" href="css/calendar.old-lighthouse.css">
     <link rel="stylesheet" href="css/calendar.olimpia-milano.css">
@@ -1010,6 +1012,7 @@
                 <option value="andromeda-galaxy">Andromeda Galaxy</option>
                 <option value="a-new-chapter">A New Chapter</option>
                 <option value="a-new-opportunity">A New Opportunity</option>
+                <option value="antarctic-expedition">Antarctic Expedition</option>
                 <option value="antarctic-ice">Antarctic Ice</option>
                 <option value="antarctic-snowdrifts">Antarctic Snowdrifts</option>
                 <option value="apple-in-honey">Apple in Honey</option>
@@ -1440,6 +1443,7 @@
                 <option value="ocean-view">Ocean View</option>
                 <option value="ocean-view-drive">Ocean View Drive</option>
                 <option value="ocean-vortex">Ocean Vortex</option>
+                <option value="off-road-trip">Off-road Trip</option>
                 <option value="okinawa-breeze">Okinawa Breeze</option>
                 <option value="old-lighthouse">Old Lighthouse</option>
                 <option value="olimpia-milano">Olimpia Milano</option>
