--- a/index.html
+++ b/index.html
@@ -494,6 +494,7 @@
     <link rel="stylesheet" href="css/calendar.one-step-at-a-time.css">
     <link rel="stylesheet" href="css/calendar.one-way-ticket.css">
     <link rel="stylesheet" href="css/calendar.on-the-island.css">
+    <link rel="stylesheet" href="css/calendar.on-the-moon.css">
     <link rel="stylesheet" href="css/calendar.on-the-wild-side.css">
     <link rel="stylesheet" href="css/calendar.orange-country.css">
     <link rel="stylesheet" href="css/calendar.orange-dragon.css">
@@ -1452,6 +1453,7 @@
                 <option value="one-step-at-a-time">One Step at a Time</option>
                 <option value="one-way-ticket">One-Way Ticket</option>
                 <option value="on-the-island">On the Island</option>
+                <option value="on-the-moon">On the Moon</option>
                 <option value="on-the-wild-side">On the Wild Side</option>
                 <option value="orange-country">Orange Country</option>
                 <option value="orange-dragon">Orange Dragon</option>
