--- a/index.html
+++ b/index.html
@@ -549,6 +549,7 @@
     <link rel="stylesheet" href="css/calendar.real-madrid.css">
     <link rel="stylesheet" href="css/calendar.real-results.css">
     <link rel="stylesheet" href="css/calendar.red-desert.css">
+    <link rel="stylesheet" href="css/calendar.red-grapefruit.css">
     <link rel="stylesheet" href="css/calendar.red-lake.css">
     <link rel="stylesheet" href="css/calendar.red-morning-light.css">
     <link rel="stylesheet" href="css/calendar.red-squirrel.css">
@@ -1508,6 +1509,7 @@
                 <option value="real-madrid">Real Madrid</option>
                 <option value="real-results">Real Results</option>
                 <option value="red-desert">Red Desert</option>
+                <option value="red-grapefruit">Red Grapefruit</option>
                 <option value="red-lake">Red Lake</option>
                 <option value="red-morning-light">Red Morning Light</option>
                 <option value="red-squirrel">Red Squirrel</option>
