--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
     <link rel="stylesheet" href="css/calendar.early-dreams.css">
     <link rel="stylesheet" href="css/calendar.eco-friendly.css">
     <link rel="stylesheet" href="css/calendar.eighty-mile-beach.css">
+    <link rel="stylesheet" href="css/calendar.emerald-lake.css">
     <link rel="stylesheet" href="css/calendar.emerald-stream.css">
     <link rel="stylesheet" href="css/calendar.emerald-water.css">
     <link rel="stylesheet" href="css/calendar.emperor-penguin.css">
@@ -1210,6 +1211,7 @@
                 <option value="early-dreams">Early Dreams</option>
                 <option value="eco-friendly">Eco-Friendly</option>
                 <option value="eighty-mile-beach">Eighty Mile Beach</option>
+                <option value="emerald-lake">Emerald Lake</option>
                 <option value="emerald-stream">Emerald Stream</option>
                 <option value="emerald-water">Emerald Water</option>
                 <option value="emperor-penguin">Emperor Penguin</option>
