--- a/index.html
+++ b/index.html
@@ -730,6 +730,7 @@
     <link rel="stylesheet" href="css/calendar.white-shark.css">
     <link rel="stylesheet" href="css/calendar.white-steamboat.css">
     <link rel="stylesheet" href="css/calendar.white-sun-of-the-desert.css">
+    <link rel="stylesheet" href="css/calendar.wild-escape.css">
     <link rel="stylesheet" href="css/calendar.wild-flower.css">
     <link rel="stylesheet" href="css/calendar.wild-orange.css">
     <link rel="stylesheet" href="css/calendar.wild-rose.css">
@@ -1691,6 +1692,7 @@
                 <option value="white-shark">White Shark</option>
                 <option value="white-steamboat">White Steamboat</option>
                 <option value="white-sun-of-the-desert">White Sun of the Desert</option>
+                <option value="wild-escape">Wild Escape</option>
                 <option value="wild-flower">Wild Flower</option>
                 <option value="wild-orange">Wild Orange</option>
                 <option value="wild-rose">Wild Rose</option>
