--- a/index.html
+++ b/index.html
@@ -558,6 +558,7 @@
     <link rel="stylesheet" href="css/calendar.remote-island.css">
     <link rel="stylesheet" href="css/calendar.right-on-track.css">
     <link rel="stylesheet" href="css/calendar.rising-sun.css">
+    <link rel="stylesheet" href="css/calendar.road-to-nowhere.css">
     <link rel="stylesheet" href="css/calendar.robin-good.css">
     <link rel="stylesheet" href="css/calendar.rocky-mountains.css">
     <link rel="stylesheet" href="css/calendar.royal-caribbean.css">
@@ -1520,6 +1521,7 @@
                 <option value="remote-island">Remote Island</option>
                 <option value="right-on-track">Right on Track</option>
                 <option value="rising-sun">Rising Sun</option>
+                <option value="road-to-nowhere">Road to Nowhere</option>
                 <option value="robin-good">Robin Good</option>
                 <option value="rocky-mountains">Rocky Mountains</option>
                 <option value="royal-caribbean">Royal Caribbean</option>
