--- a/index.html
+++ b/index.html
@@ -441,6 +441,7 @@
     <link rel="stylesheet" href="css/calendar.mogren-beach.css">
     <link rel="stylesheet" href="css/calendar.monochrome-ink.css">
     <link rel="stylesheet" href="css/calendar.monte-carlo.css">
+    <link rel="stylesheet" href="css/calendar.montego-bay.css">
     <link rel="stylesheet" href="css/calendar.moon-bridge.css">
     <link rel="stylesheet" href="css/calendar.moonlit-path.css">
     <link rel="stylesheet" href="css/calendar.morning-coffee.css">
@@ -1407,6 +1408,7 @@
                 <option value="mogren-beach">Mogren Beach</option>
                 <option value="monochrome-ink">Monochrome Ink</option>
                 <option value="monte-carlo">Monte Carlo</option>
+                <option value="montego-bay">Montego Bay</option>
                 <option value="moon-bridge">Moon Bridge</option>
                 <option value="moonlit-path">Moonlit Path</option>
                 <option value="morning-coffee">Morning Coffee</option>
