--- a/index.html
+++ b/index.html
@@ -454,6 +454,7 @@
     <link rel="stylesheet" href="css/calendar.mountain-view.css">
     <link rel="stylesheet" href="css/calendar.mount-fuji.css">
     <link rel="stylesheet" href="css/calendar.mount-cook.css">
+    <link rel="stylesheet" href="css/calendar.moving-forward.css">
     <link rel="stylesheet" href="css/calendar.my-beautiful-village.css">
     <link rel="stylesheet" href="css/calendar.my-dream-country.css">
     <link rel="stylesheet" href="css/calendar.my-dream-home.css">
@@ -1420,6 +1421,7 @@
                 <option value="mountain-view">Mountain View</option>
                 <option value="mount-fuji">Mount Fuji</option>
                 <option value="mount-cook">Mount Cook</option>
+                <option value="moving-forward">Moving Forward</option>
                 <option value="my-beautiful-village">My Beautiful Village</option>
                 <option value="my-dream-country">My Dream Country</option>
                 <option value="my-dream-home">My Dream Home</option>
