--- a/index.html
+++ b/index.html
@@ -381,6 +381,7 @@
     <link rel="stylesheet" href="css/calendar.keep-it-simple.css">
     <link rel="stylesheet" href="css/calendar.keep-on-smiling.css">
     <link rel="stylesheet" href="css/calendar.keep-shining.css">
+    <link rel="stylesheet" href="css/calendar.key-to-progress.css">
     <link rel="stylesheet" href="css/calendar.kilimanjaro-outskirts.css">
     <link rel="stylesheet" href="css/calendar.lady-blue.css">
     <link rel="stylesheet" href="css/calendar.land-of-dreams.css">
@@ -1350,6 +1351,7 @@
                 <option value="keep-it-simple">Keep it Simple</option>
                 <option value="keep-on-smiling">Keep on Smiling</option>
                 <option value="keep-shining">Keep Shining</option>
+                <option value="key-to-progress">Key to Progress</option>
                 <option value="kilimanjaro-outskirts">Kilimanjaro Outskirts</option>
                 <option value="lady-blue">Lady Blue</option>
                 <option value="lake-mcdonald">Lake McDonald</option>
