--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@
     <link rel="stylesheet" href="css/calendar.greyscale.css">
     <link rel="stylesheet" href="css/calendar.group-11.css">
     <link rel="stylesheet" href="css/calendar.guangzhou-lights.css">
+    <link rel="stylesheet" href="css/calendar.halloween-night-mode.css">
     <link rel="stylesheet" href="css/calendar.haute-couture.css">
     <link rel="stylesheet" href="css/calendar.hawaiian-blue.css">
     <link rel="stylesheet" href="css/calendar.heavy-rain.css">
@@ -1299,6 +1300,7 @@
                 <option value="greyscale">Greyscale</option>
                 <option value="group-11">Group 11</option>
                 <option value="guangzhou-lights">Guangzhou Lights</option>
+                <option value="halloween-night-mode">Halloween Night Mode</option>
                 <option value="haute-couture">Haute Couture</option>
                 <option value="hawaiian-blue">Hawaiian Blue</option>
                 <option value="heavy-rain">Heavy Rain</option>
