--- a/index.html
+++ b/index.html
@@ -333,6 +333,7 @@
     <link rel="stylesheet" href="css/calendar.haute-couture.css">
     <link rel="stylesheet" href="css/calendar.hawaiian-blue.css">
     <link rel="stylesheet" href="css/calendar.heavy-rain.css">
+    <link rel="stylesheet" href="css/calendar.hidden-gem.css">
     <link rel="stylesheet" href="css/calendar.hidden-gems.css">
     <link rel="stylesheet" href="css/calendar.hidden-paradise.css">
     <link rel="stylesheet" href="css/calendar.hidden-trail.css">
@@ -1304,6 +1305,7 @@
                 <option value="haute-couture">Haute Couture</option>
                 <option value="hawaiian-blue">Hawaiian Blue</option>
                 <option value="heavy-rain">Heavy Rain</option>
+                <option value="hidden-gem">Hidden Gem</option>
                 <option value="hidden-gems">Hidden Gems</option>
                 <option value="hidden-paradise">Hidden Paradise</option>
                 <option value="hidden-trail">Hidden Trail</option>
