--- a/index.html
+++ b/index.html
@@ -487,6 +487,7 @@
     <link rel="stylesheet" href="css/calendar.now-is-your-moment.css">
     <link rel="stylesheet" href="css/calendar.ocean-beach.css">
     <link rel="stylesheet" href="css/calendar.ocean-dreams.css">
+    <link rel="stylesheet" href="css/calendar.ocean-drive.css">
     <link rel="stylesheet" href="css/calendar.oceanfront-elegance.css">
     <link rel="stylesheet" href="css/calendar.ocean-parkway.css">
     <link rel="stylesheet" href="css/calendar.ocean-surf.css">
@@ -1457,6 +1458,7 @@
                 <option value="now-is-your-moment">NOW is Your Moment</option>
                 <option value="ocean-beach">Ocean Beach</option>
                 <option value="ocean-dreams">Ocean Dreams</option>
+                <option value="ocean-drive">Ocean Drive</option>
                 <option value="oceanfront-elegance">Oceanfront Elegance</option>
                 <option value="ocean-parkway">Ocean Parkway</option>
                 <option value="ocean-surf">Ocean Surf</option>
