--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
     <link rel="stylesheet" href="css/calendar.big-dream.css">
     <link rel="stylesheet" href="css/calendar.big-fashion.css">
     <link rel="stylesheet" href="css/calendar.big-pacific.css">
+    <link rel="stylesheet" href="css/calendar.bitter-coffee-of-the-middle-east.css">
     <link rel="stylesheet" href="css/calendar.black-bird.css">
     <link rel="stylesheet" href="css/calendar.black-classic.css">
     <link rel="stylesheet" href="css/calendar.black-coffee.css">
@@ -1061,6 +1062,7 @@
                 <option value="big-dream">Big Dream</option>
                 <option value="big-fashion">Big Fashion</option>
                 <option value="big-pacific">Big Pacific</option>
+                <option value="bitter-coffee-of-the-middle-east">Bitter Coffee of the Middle East</option>
                 <option value="black-bird">Black Bird</option>
                 <option value="black-classic">Black Classic</option>
                 <option value="black-coffee">Black Coffee</option>
