--- a/index.html
+++ b/index.html
@@ -595,6 +595,7 @@
     <link rel="stylesheet" href="css/calendar.shades-of-blue.css">
     <link rel="stylesheet" href="css/calendar.shaolin-monastery.css">
     <link rel="stylesheet" href="css/calendar.shaping-the-future.css">
+    <link rel="stylesheet" href="css/calendar.shark-bay.css">
     <link rel="stylesheet" href="css/calendar.shift-in-perception.css">
     <link rel="stylesheet" href="css/calendar.significant-improvement.css">
     <link rel="stylesheet" href="css/calendar.silent-code.css">
@@ -1567,6 +1568,7 @@
                 <option value="shades-of-blue">Shades Of Blue</option>
                 <option value="shaolin-monastery">Shaolin Monastery</option>
                 <option value="shaping-the-future">Shaping the Future</option>
+                <option value="shark-bay">Shark Bay</option>
                 <option value="shift-in-perception">Shift in Perception</option>
                 <option value="significant-improvement">Significant Improvement</option>
                 <option value="silent-code">Silent Code</option>
