--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
     <link rel="stylesheet" href="css/calendar.eco-friendly.css">
     <link rel="stylesheet" href="css/calendar.eighty-mile-beach.css">
     <link rel="stylesheet" href="css/calendar.emerald-lake.css">
+    <link rel="stylesheet" href="css/calendar.emerald-ocean.css">
     <link rel="stylesheet" href="css/calendar.emerald-stream.css">
     <link rel="stylesheet" href="css/calendar.emerald-water.css">
     <link rel="stylesheet" href="css/calendar.emperor-penguin.css">
@@ -1227,6 +1228,7 @@
                 <option value="eco-friendly">Eco-Friendly</option>
                 <option value="eighty-mile-beach">Eighty Mile Beach</option>
                 <option value="emerald-lake">Emerald Lake</option>
+                <option value="emerald-ocean">Emerald Ocean</option>
                 <option value="emerald-stream">Emerald Stream</option>
                 <option value="emerald-water">Emerald Water</option>
                 <option value="emperor-penguin">Emperor Penguin</option>
