--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@
     <link rel="stylesheet" href="css/calendar.green-heaven.css">
     <link rel="stylesheet" href="css/calendar.greenland-icebergs.css">
     <link rel="stylesheet" href="css/calendar.green-light.css">
+    <link rel="stylesheet" href="css/calendar.green-ocean.css">
     <link rel="stylesheet" href="css/calendar.green-river.css">
     <link rel="stylesheet" href="css/calendar.green-tea.css">
     <link rel="stylesheet" href="css/calendar.greyscale.css">
@@ -1302,6 +1303,7 @@
                 <option value="green-heaven">Green Heaven</option>
                 <option value="greenland-icebergs">Greenland’s Icebergs</option>
                 <option value="green-light">Green Light</option>
+                <option value="green-ocean">Green Ocean</option>
                 <option value="green-river">Green River</option>
                 <option value="green-tea">Green Tea</option>
                 <option value="greyscale">Greyscale</option>
