--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
     <link rel="stylesheet" href="css/calendar.divi-divi-trees.css">
     <link rel="stylesheet" href="css/calendar.domino-dancing.css">
     <link rel="stylesheet" href="css/calendar.domino-effect.css">
+    <link rel="stylesheet" href="css/calendar.do-something-great.css">
     <link rel="stylesheet" href="css/calendar.doterra-black.css">
     <link rel="stylesheet" href="css/calendar.doterra-colors.css">
     <link rel="stylesheet" href="css/calendar.doterra-gold.css">
@@ -1201,7 +1202,8 @@
                 <option value="distant-skies">Distant Skies</option>
                 <option value="divi-divi-trees">Divi-divi Trees</option>
                 <option value="domino-dancing">Domino Dancing</option>
-                <option value="domino-effect">Domino Effect</option>
+                <option value="do-something-great">Do Something Great</option>
+                 <option value="domino-effect">Domino Effect</option>
                 <option value="doterra-black">DōTERRA Black</option>
                 <option value="doterra-colors">DōTERRA Colors</option>
                 <option value="doterra-gold">DōTERRA Gold</option>
