--- a/index.html
+++ b/index.html
@@ -728,6 +728,7 @@
     <link rel="stylesheet" href="css/calendar.upcoming-dream.css">
     <link rel="stylesheet" href="css/calendar.urban-fashion.css">
     <link rel="stylesheet" href="css/calendar.urban-jungle.css">
+    <link rel="stylesheet" href="css/calendar.vacation-beach.css">
     <link rel="stylesheet" href="css/calendar.velvety-dark.css">
     <link rel="stylesheet" href="css/calendar.vibrant-colors.css">
     <link rel="stylesheet" href="css/calendar.viking-helmet.css">
@@ -1704,6 +1705,7 @@
                 <option value="upcoming-dream">Upcoming Dream</option>
                 <option value="urban-fashion">Urban Fashion</option>
                 <option value="urban-jungle">Urban Jungle</option>
+                <option value="vacation-beach">Vacation Beach</option>
                 <option value="velvety-dark">Velvety Dark</option>
                 <option value="vibrant-colors">Vibrant Colors</option>
                 <option value="viking-helmet">Viking Helmet</option>
