--- a/index.html
+++ b/index.html
@@ -502,6 +502,7 @@
     <link rel="stylesheet" href="css/calendar.okinawa-breeze.css">
     <link rel="stylesheet" href="css/calendar.old-lighthouse.css">
     <link rel="stylesheet" href="css/calendar.olimpia-milano.css">
+    <link rel="stylesheet" href="css/calendar.once-in-a-lifetime.css">
     <link rel="stylesheet" href="css/calendar.one-dream.css">
     <link rel="stylesheet" href="css/calendar.one-step-ahead.css">
     <link rel="stylesheet" href="css/calendar.one-step-at-a-time.css">
@@ -1479,6 +1480,7 @@
                 <option value="okinawa-breeze">Okinawa Breeze</option>
                 <option value="old-lighthouse">Old Lighthouse</option>
                 <option value="olimpia-milano">Olimpia Milano</option>
+                <option value="once-in-a-lifetime">Once-in-a-Lifetime</option>
                 <option value="one-dream">One Dream</option>
                 <option value="one-step-ahead">One Step Ahead</option>
                 <option value="one-step-at-a-time">One Step at a Time</option>
