--- a/index.html
+++ b/index.html
@@ -633,6 +633,7 @@
     <link rel="stylesheet" href="css/calendar.straight-to-the-point.css">
     <link rel="stylesheet" href="css/calendar.strategic-advantage.css">
     <link rel="stylesheet" href="css/calendar.strategic-planning.css">
+    <link rel="stylesheet" href="css/calendar.strawberry-fields.css">
     <link rel="stylesheet" href="css/calendar.strawberry-moon.css">
     <link rel="stylesheet" href="css/calendar.street-art-installation.css">
     <link rel="stylesheet" href="css/calendar.street-fashion-style.css">
@@ -1612,6 +1613,7 @@
                 <option value="straight-to-the-point">Straight to the Point</option>
                 <option value="strategic-advantage">Strategic Advantage</option>
                 <option value="strategic-planning">Strategic Planning</option>
+                <option value="strawberry-fields">Strawberry Fields</option>
                 <option value="strawberry-moon">Strawberry Moon</option>
                 <option value="street-art-installation">Street Art Installation</option>
                 <option value="street-fashion-style">Street Fashion Style</option>
