--- a/index.html
+++ b/index.html
@@ -1613,7 +1613,7 @@
                 <option value="straight-to-the-point">Straight to the Point</option>
                 <option value="strategic-advantage">Strategic Advantage</option>
                 <option value="strategic-planning">Strategic Planning</option>
-                <option value="strawberry-fields">Strawberry Fields</option>
+                <option value="strawberry-fields">Strawberry Fields Forever</option>
                 <option value="strawberry-moon">Strawberry Moon</option>
                 <option value="street-art-installation">Street Art Installation</option>
                 <option value="street-fashion-style">Street Fashion Style</option>
