--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <link rel="stylesheet" href="css/calendar.aqua-spirit.css">
     <link rel="stylesheet" href="css/calendar.a-quiet-creek.css">
     <link rel="stylesheet" href="css/calendar.arctic-glow.css">
+    <link rel="stylesheet" href="css/calendar.arctic-panorama-resort.css">
     <link rel="stylesheet" href="css/calendar.arctic-snowfall.css">
     <link rel="stylesheet" href="css/calendar.art-studio.css">
     <link rel="stylesheet" href="css/calendar.a-simple-task.css">
@@ -1042,6 +1043,7 @@
                 <option value="aqua-spirit">Aqua Spirit</option>
                 <option value="a-quiet-creek">A Quiet Creek</option>
                 <option value="arctic-glow">Arctic Glow</option>
+                <option value="arctic-panorama-resort">Arctic Panorama Resort</option>
                 <option value="arctic-snowfall">Arctic Snowfall</option>
                 <option value="art-studio">Art Studio</option>
                 <option value="a-simple-task">A Simple Task</option>
