--- a/index.html
+++ b/index.html
@@ -452,6 +452,7 @@
     <link rel="stylesheet" href="css/calendar.montego-bay.css">
     <link rel="stylesheet" href="css/calendar.moon-bridge.css">
     <link rel="stylesheet" href="css/calendar.moonlit-path.css">
+    <link rel="stylesheet" href="css/calendar.moonshot-idea.css">
     <link rel="stylesheet" href="css/calendar.morning-coffee.css">
     <link rel="stylesheet" href="css/calendar.morning-forest.css">
     <link rel="stylesheet" href="css/calendar.mountain-lake.css">
@@ -1434,6 +1435,7 @@
                 <option value="montego-bay">Montego Bay</option>
                 <option value="moon-bridge">Moon Bridge</option>
                 <option value="moonlit-path">Moonlit Path</option>
+                <option value="moonshot-idea">Moonshot Idea</option>
                 <option value="morning-coffee">Morning Coffee</option>
                 <option value="morning-forest">Morning Forest</option>
                 <option value="mountain-lake">Mountain Lake</option>
