--- a/index.html
+++ b/index.html
@@ -704,6 +704,7 @@
     <link rel="stylesheet" href="css/calendar.the-red-city.css">
     <link rel="stylesheet" href="css/calendar.the-silver-sword.css">
     <link rel="stylesheet" href="css/calendar.the-spirit-of-innovation.css">
+    <link rel="stylesheet" href="css/calendar.the-state-of-hawaii.css">
     <link rel="stylesheet" href="css/calendar.the-unstoppable-mindset.css">
     <link rel="stylesheet" href="css/calendar.the-west-coast.css">
     <link rel="stylesheet" href="css/calendar.the-world-of-nature.css">
@@ -1686,6 +1687,7 @@
                 <option value="samurai-path">The Samurai's Path</option>
                 <option value="the-silver-sword">The Silver Sword</option>
                 <option value="the-spirit-of-innovation">The Spirit of Innovation</option>
+                <option value="the-state-of-hawaii">The State of Hawaii</option>
                 <option value="the-unstoppable-mindset">The Unstoppable Mindset</option>
                 <option value="the-west-coast">The West Coast</option>
                 <option value="the-world-of-nature">The World of Nature</option>
