--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     <link rel="stylesheet" href="css/calendar.back-on-track.css">
     <link rel="stylesheet" href="css/calendar.back-to-paradise.css">
     <link rel="stylesheet" href="css/calendar.bamboo-flute.css">
+    <link rel="stylesheet" href="css/calendar.banana-republic.css">
     <link rel="stylesheet" href="css/calendar.battle-of-the-ice.css">
     <link rel="stylesheet" href="css/calendar.bermuda-triangle.css">
     <link rel="stylesheet" href="css/calendar.best-kept-secret.css">
@@ -1061,6 +1062,7 @@
                 <option value="back-on-track">Back on Track</option>
                 <option value="back-to-paradise">Back to Paradadise</option>
                 <option value="bamboo-flute">Bamboo Flute</option>
+                <option value="banana-republic">Banana Republic</option>
                 <option value="battle-of-the-ice">Battle of the Ice</option>
                 <option value="bermuda-triangle">Bermuda Triangle</option>
                 <option value="best-kept-secret">Best Kept Secret</option>
