--- a/index.html
+++ b/index.html
@@ -570,6 +570,7 @@
     <link rel="stylesheet" href="css/calendar.red-lake.css">
     <link rel="stylesheet" href="css/calendar.red-morning-light.css">
     <link rel="stylesheet" href="css/calendar.red-squirrel.css">
+    <link rel="stylesheet" href="css/calendar.red-tape.css">
     <link rel="stylesheet" href="css/calendar.remarkable-city.css">
     <link rel="stylesheet" href="css/calendar.remote-island.css">
     <link rel="stylesheet" href="css/calendar.right-on-track.css">
@@ -1554,6 +1555,7 @@
                 <option value="red-lake">Red Lake</option>
                 <option value="red-morning-light">Red Morning Light</option>
                 <option value="red-squirrel">Red Squirrel</option>
+                <option value="red-tape">Red Tape</option>
                 <option value="remarkable-city">Remarkable City</option>
                 <option value="remote-island">Remote Island</option>
                 <option value="right-on-track">Right on Track</option>
