--- a/index.html
+++ b/index.html
@@ -666,6 +666,7 @@
     <link rel="stylesheet" href="css/calendar.tactical-advantage.css">
     <link rel="stylesheet" href="css/calendar.tactical-command.css">
     <link rel="stylesheet" href="css/calendar.take-me-to-summer.css">
+    <link rel="stylesheet" href="css/calendar.taste-of-victory.css">
     <link rel="stylesheet" href="css/calendar.tea-garden.css">
     <link rel="stylesheet" href="css/calendar.tech-innovator.css">
     <link rel="stylesheet" href="css/calendar.technological-future.css">
@@ -698,7 +699,6 @@
     <link rel="stylesheet" href="css/calendar.the-last-day-of-spring.css">
     <link rel="stylesheet" href="css/calendar.the-last-mohican.css">
     <link rel="stylesheet" href="css/calendar.the-last-paradise.css">
-    <link rel="stylesheet" href="css/calendar.manchester-city.css">
     <link rel="stylesheet" href="css/calendar.the-modern-developer.css">
     <link rel="stylesheet" href="css/calendar.the-perfect-blend.css">
     <link rel="stylesheet" href="css/calendar.the-prince-of-monaco.css">
@@ -1651,6 +1651,7 @@
                 <option value="tactical-advantage">Tactical Advantage</option>
                 <option value="tactical-command">Tactical Command</option>
                 <option value="take-me-to-summer">Take Me to Summer</option>
+                <option value="taste-of-victory">Taste of Victory</option>
                 <option value="tea-garden">Tea Garden</option>
                 <option value="tech-innovator">Tech Innovator</option>
                 <option value="technological-future">Technological Future</option>
