--- a/index.html
+++ b/index.html
@@ -542,6 +542,7 @@
     <link rel="stylesheet" href="css/calendar.polar-bear.css">
     <link rel="stylesheet" href="css/calendar.porcupine-quill.css">
     <link rel="stylesheet" href="css/calendar.port-victoria.css">
+    <link rel="stylesheet" href="css/calendar.positive-attitude.css">
     <link rel="stylesheet" href="css/calendar.positive-energy.css">
     <link rel="stylesheet" href="css/calendar.power-play.css">
     <link rel="stylesheet" href="css/calendar.practical-experience.css">
@@ -1527,6 +1528,7 @@
                 <option value="polar-bear">Polar Bear</option>
                 <option value="porcupine-quill">Porcupine Quill</option>
                 <option value="port-victoria">Port Victoria</option>
+                <option value="positive-attitude">Positive Attitude</option>
                 <option value="positive-energy">Positive Energy</option>
                 <option value="power-play">Power Play</option>
                 <option value="practical-experience">Practical Experience</option>
