--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
     <link rel="stylesheet" href="css/calendar.dark-star.css">
     <link rel="stylesheet" href="css/calendar.dartagnans-rapier.css">
     <link rel="stylesheet" href="css/calendar.daruma-doll.css">
+    <link rel="stylesheet" href="css/calendar.day-dream-mode.css">
     <link rel="stylesheet" href="css/calendar.deep-forest.css">
     <link rel="stylesheet" href="css/calendar.deep-ocean.css">
     <link rel="stylesheet" href="css/calendar.deep-space.css">
@@ -1194,6 +1195,7 @@
                 <option value="dark-star">Dark Star</option>
                 <option value="dartagnans-rapier">D'Artagnan's Rapier</option>
                 <option value="daruma-doll">Daruma Doll</option>
+                <option value="day-dream-mode">Day Dream Mode</option>
                 <option value="deep-forest">Deep Forest</option>
                 <option value="deep-ocean">Deep Ocean</option>
                 <option value="deep-space">Deep Space</option>
