--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
     <link rel="stylesheet" href="css/calendar.endless-horizon.css">
     <link rel="stylesheet" href="css/calendar.endless-summer.css">
     <link rel="stylesheet" href="css/calendar.enjoy-the-journey.css">
+    <link rel="stylesheet" href="css/calendar.espresso-monaco.css">
     <link rel="stylesheet" href="css/calendar.essential-oils.css">
     <link rel="stylesheet" href="css/calendar.everest-view.css">
     <link rel="stylesheet" href="css/calendar.every-little-step-counts.css">
@@ -1252,6 +1253,7 @@
                 <option value="endless-horizon">Endless Horizon</option>
                 <option value="endless-summer">Endless Summer</option>
                 <option value="enjoy-the-journey">Enjoy the Journey</option>
+                <option value="espresso-monaco">Espresso Monaco</option>
                 <option value="essential-oils">Essential Oils</option>
                 <option value="everest-view">Everest View</option>
                 <option value="every-little-step-counts">Every Little Step Counts</option>
