--- a/index.html
+++ b/index.html
@@ -441,6 +441,7 @@
     <link rel="stylesheet" href="css/calendar.middle-of-the-night.css">
     <link rel="stylesheet" href="css/calendar.midnight-alchemy.css">
     <link rel="stylesheet" href="css/calendar.midnight-black.css">
+    <link rel="stylesheet" href="css/calendar.midnight-hour.css">
     <link rel="stylesheet" href="css/calendar.midnight-jungle.css">
     <link rel="stylesheet" href="css/calendar.midnight-sun.css">
     <link rel="stylesheet" href="css/calendar.midnight-train.css">
@@ -568,6 +569,7 @@
     <link rel="stylesheet" href="css/calendar.random-coincidence.css">
     <link rel="stylesheet" href="css/calendar.real-madrid.css">
     <link rel="stylesheet" href="css/calendar.real-results.css">
+    <link rel="stylesheet" href="css/calendar.record-demand.css">
     <link rel="stylesheet" href="css/calendar.red-desert.css">
     <link rel="stylesheet" href="css/calendar.red-grapefruit.css">
     <link rel="stylesheet" href="css/calendar.red-lake.css">
@@ -1430,6 +1432,7 @@
                 <option value="middle-of-the-night">Middle of the Night</option>
                 <option value="midnight-alchemy">Midnight Alchemy</option>
                 <option value="midnight-black">Midnight Black</option>
+                <option value="midnight-hour">Midnight Hour</option>
                 <option value="midnight-jungle">Midnight Jungle</option>
                 <option value="midnight-sun">Midnight Sun</option>
                 <option value="midnight-train">Midnight Train</option>
@@ -1556,6 +1559,7 @@
                 <option value="random-coincidence">Random Coincidence</option>
                 <option value="real-madrid">Real Madrid</option>
                 <option value="real-results">Real Results</option>
+                <option value="record-demand">Record Demand</option>
                 <option value="red-desert">Red Desert</option>
                 <option value="red-grapefruit">Red Grapefruit</option>
                 <option value="red-lake">Red Lake</option>
