--- a/index.html
+++ b/index.html
@@ -539,6 +539,7 @@
     <link rel="stylesheet" href="css/calendar.pink-flamingo.css">
     <link rel="stylesheet" href="css/calendar.pink-lady.css">
     <link rel="stylesheet" href="css/calendar.pink-lake.css">
+    <link rel="stylesheet" href="css/calendar.pink-sunrise.css">
     <link rel="stylesheet" href="css/calendar.pirate-ship.css">
     <link rel="stylesheet" href="css/calendar.planet-of-robots.css">
     <link rel="stylesheet" href="css/calendar.point-nemo.css">
@@ -1529,6 +1530,7 @@
                 <option value="pink-flamingo">Pink Flamingo</option>
                 <option value="pink-lady">Pink Lady</option>
                 <option value="pink-lake">Pink Lake</option>
+                <option value="pink-sunrise">Pink Sunrise</option>
                 <option value="pirate-ship">Pirate Ship</option>
                 <option value="planet-of-robots">Planet of Robots</option>
                 <option value="point-nemo">Point Nemo</option>
