--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
     <link rel="stylesheet" href="css/calendar.emerald-stream.css">
     <link rel="stylesheet" href="css/calendar.emerald-water.css">
     <link rel="stylesheet" href="css/calendar.emperor-penguin.css">
+    <link rel="stylesheet" href="css/calendar.enchanting-island.css">
     <link rel="stylesheet" href="css/calendar.endless-horizon.css">
     <link rel="stylesheet" href="css/calendar.endless-summer.css">
     <link rel="stylesheet" href="css/calendar.enjoy-the-journey.css">
@@ -1255,6 +1256,7 @@
                 <option value="emerald-stream">Emerald Stream</option>
                 <option value="emerald-water">Emerald Water</option>
                 <option value="emperor-penguin">Emperor Penguin</option>
+                <option value="enchanting-island">Enchanting Island</option>
                 <option value="endless-horizon">Endless Horizon</option>
                 <option value="endless-summer">Endless Summer</option>
                 <option value="enjoy-the-journey">Enjoy the Journey</option>
