--- a/index.html
+++ b/index.html
@@ -685,6 +685,7 @@
     <link rel="stylesheet" href="css/calendar.the-best-kind-of-view.css">
     <link rel="stylesheet" href="css/calendar.the-best-mood.css">
     <link rel="stylesheet" href="css/calendar.the-best-of-fashion.css">
+    <link rel="stylesheet" href="css/calendar.the-best-offer.css">
     <link rel="stylesheet" href="css/calendar.the-black-lake.css">
     <link rel="stylesheet" href="css/calendar.the-black-spruce.css">
     <link rel="stylesheet" href="css/calendar.the-burning-heart-of-the-sahara.css">
@@ -1678,6 +1679,7 @@
                 <option value="the-best-kind-of-view">The Best Kind of View</option>
                 <option value="the-best-mood">The Best Mood</option>
                 <option value="the-best-of-fashion">The Best of Fashion</option>
+                <option value="the-best-offer">The Best Offer</option>
                 <option value="the-black-lake">The Black Lake</option>
                 <option value="the-black-spruce">The Black Spruce</option>
                 <option value="the-burning-heart-of-the-sahara">The Burning Heart of the Sahara</option>
