--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     <link rel="stylesheet" href="css/calendar.banana-republic.css">
     <link rel="stylesheet" href="css/calendar.battle-of-the-ice.css">
     <link rel="stylesheet" href="css/calendar.beachfront-paradise.css">
+    <link rel="stylesheet" href="css/calendar.beautiful-winter.css">
     <link rel="stylesheet" href="css/calendar.bermuda-triangle.css">
     <link rel="stylesheet" href="css/calendar.best-kept-secret.css">
     <link rel="stylesheet" href="css/calendar.best-of-technology.css">
@@ -1076,6 +1077,7 @@
                 <option value="banana-republic">Banana Republic</option>
                 <option value="battle-of-the-ice">Battle of the Ice</option>
                 <option value="beachfront-paradise">Beachfront Paradise</option>
+                <option value="beautiful-winter">Beautiful Winter</option>
                 <option value="bermuda-triangle">Bermuda Triangle</option>
                 <option value="best-kept-secret">Best Kept Secret</option>
                 <option value="best-of-technology">Best of Technology</option>
