--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     <link rel="stylesheet" href="css/calendar.away-from-home.css">
     <link rel="stylesheet" href="css/calendar.a-world-beyond-borders.css">
     <link rel="stylesheet" href="css/calendar.back-in-black.css">
+    <link rel="stylesheet" href="css/calendar.back-in-line.css">
     <link rel="stylesheet" href="css/calendar.back-in-the-game.css">
     <link rel="stylesheet" href="css/calendar.back-on-track.css">
     <link rel="stylesheet" href="css/calendar.back-to-paradise.css">
@@ -1070,6 +1071,7 @@
                 <option value="away-from-home">Away From Home</option>
                 <option value="a-world-beyond-borders">A World beyond Borders</option>
                 <option value="back-in-black">Back in Black</option>
+                <option value="back-in-line">Back in Line</option>
                 <option value="back-in-the-game">Back in the Game</option>
                 <option value="back-on-track">Back on Track</option>
                 <option value="back-to-paradise">Back to Paradadise</option>
