--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
     <link rel="stylesheet" href="css/calendar.black-coffee.css">
     <link rel="stylesheet" href="css/calendar.black-diamond.css">
     <link rel="stylesheet" href="css/calendar.black-fashion.css">
+    <link rel="stylesheet" href="css/calendar.black-friday.css">
     <link rel="stylesheet" href="css/calendar.black-hacker.css">
     <link rel="stylesheet" href="css/calendar.black-hawk.css">
     <link rel="stylesheet" href="css/calendar.black-hole.css">
@@ -1099,6 +1100,7 @@
                 <option value="black-coffee">Black Coffee</option>
                 <option value="black-diamond">Black Diamond</option>
                 <option value="black-fashion">Black Fashion</option>
+                <option value="black-friday">Black Friday</option>
                 <option value="black-hacker">Black Hacker</option>
                 <option value="black-hawk">Black Hawk</option>
                 <option value="black-hole">Black Hole</option>
