--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@
     <link rel="stylesheet" href="css/calendar.fiji-islands.css">
     <link rel="stylesheet" href="css/calendar.finish-line.css">
     <link rel="stylesheet" href="css/calendar.fir-balsam.css">
+    <link rel="stylesheet" href="css/calendar.first-project.css">
     <link rel="stylesheet" href="css/calendar.flamingo-bay.css">
     <link rel="stylesheet" href="css/calendar.flamingo-sky.css">
     <link rel="stylesheet" href="css/calendar.forgotten-dreams.css">
@@ -1291,6 +1292,7 @@
                 <option value="fiji-islands">Fiji Islands</option>
                 <option value="finish-line">Finish Line</option>
                 <option value="fir-balsam">Fir Balsam</option>
+                <option value="first-project">First Project</option>
                 <option value="flamingo-bay">Flamingo Bay</option>
                 <option value="flamingo-sky">Flamingo Sky</option>
                 <option value="forgotten-dreams">Forgotten Dreams</option>
