--- a/index.html
+++ b/index.html
@@ -639,6 +639,7 @@
     <link rel="stylesheet" href="css/calendar.spark-of-knowledge.css">
     <link rel="stylesheet" href="css/calendar.spring-meadow.css">
     <link rel="stylesheet" href="css/calendar.spring-silence.css">
+    <link rel="stylesheet" href="css/calendar.star-dream.css">
     <link rel="stylesheet" href="css/calendar.statue-of-liberty.css">
     <link rel="stylesheet" href="css/calendar.stay-cool.css">
     <link rel="stylesheet" href="css/calendar.stay-curious.css">
@@ -1639,6 +1640,7 @@
                 <option value="spark-of-knowledge">Spark of Knowledge</option>
                 <option value="spring-meadow">Spring Meadow</option>
                 <option value="spring-silence">Spring Silence</option>
+                <option value="star-dream">Star Dream</option>
                 <option value="statue-of-liberty">Statue of Liberty</option>
                 <option value="stay-cool">Stay Cool</option>
                 <option value="stay-curious">Stay Curious</option>
